--- a/server/templates/article.html
+++ b/server/templates/article.html
@@ -179,7 +179,7 @@
         <div class="filter-container" id="filters">
             <!-- JavaScript将在这里动态添加其他选项 -->
         </div>
-        <p><a href="/">Index</a> | <a href="/calendar">Calendar</a> | <a href="/favorites">My Favorites</a> | <a href="/archive">Archive</a> | <a href="/storage">Storage</a></p>
+        <p><a href="/">Index</a> | <a href="/calendar">Calendar</a> | <a href="/favorites">Favorites</a> | <a href="/archive">Archive</a> | <a href="/profile">Profile</a></p>
     </div>
         <div class="content">
             <div class="inner-content">
