--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -94,7 +94,7 @@
             </div>
             <p><a href="/articles">Click here to see TODAY articles.</a></p>
             <p><a href="/calendar">Click here to see ALL articles.</a></p>
-            <p><a href="/favorites">(local only) Click here to see Favorites</a> | <a href="/archive">Archive</a> | <a href="/storage">Storage</a></p>
+            <p><a href="/favorites">(local only) Click here to see Favorites</a> | <a href="/archive">Archive</a> | <a href="/profile">Profile</a></p>
             <p>Latest Update: {{ latest_update }}, Articles: {{ count }}</p>
         </div>
         <div class="inner-content">
